@@ -1,3 +1,6 @@
+─────────────────┨ 0.6.1 ┠─────────────────
+1) Fixed bug in RuleDir for a top level files.
+
 ─────────────────┨ 0.6.0 ┠─────────────────
 1) New CLI parameter e/example for printing out default config
 with autofilled source/destination fields according to the current
